claim method